# tradelens

./: .gitignore  README.md  pyproject.toml
tradelens/: main.py  models.py  parsers.py  settings.py  utils.py
tradelens/templates/: journal_template.md
