[tool.poetry]
name = "tradelens"
version = "0.1.0"
description = "TradeLens is an open-source trading journal tool designed to help traders gain deeper insights into their trades. By leveraging Obsidian, TradeLens offers a seamless way to convert trading data from HTS into structured notes."
authors = ["Minki Kim <mingi3314@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.scripts]
tradelens = "tradelens.main:app"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.31"
typer = "^0.12.3"
jinja2 = "^3.1.4"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
fix = true
exclude = [
    '*.pyi',
    "site-packages",
    "node_modules",
    ".mypy_cache",
    ".ruff_cache",
]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
unfixable = ["B"] # Avoid trying to fix flake8-bugbear (`B`) violations.
preview = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"constants.py" = ["E501"]

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
allow_redefinition = true
show_column_numbers = true
no_implicit_reexport = true
pretty = true

plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
